@@ -27,6 +27,9 @@ lintian (2.5.10.1) UNRELEASED; urgency=low
   * lib/Lintian/Architecture.pm:
     + [NT] Properly handle cases like "linux-amd64" being an
       alias of "amd64".
+  * lib/Lintian/Path.pm:
+    + [NT] Always resolve hardlinks relative to the package
+      root.
   * lib/Lintian/Tag/Info.pm:
     + [NT] Fix poor error message due to the wrong variable
       being unused.  Thanks to Christoph Biedl for the report
